--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,47 +1,66 @@
-name: CI
+name: Code Analysis
 
 on: pull_request
 
+# Cancels all previous workflow runs for pull requests that have not completed.
+concurrency:
+  # The concurrency group contains the workflow name and the branch name for pull requests
+  # or the commit hash for any other events.
+  group: ${{ github.workflow }}-${{ github.event_name == 'pull_request' && github.head_ref || github.sha }}
+  cancel-in-progress: true
+
 jobs:
-  CI:
-    runs-on: ubuntu-latest
-    
+  analysis:
+    runs-on: self-hosted
+
     strategy:
       matrix:
-        node: [ 14.15 ]
+        node: ['14.17']
         php: ['7.4']
-        
+
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
+
+      - name: Use desired version of NodeJS
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node }}
+
+      - name: Cache NPM packages
+        uses: actions/cache@v2
+        with:
+          # npm cache files are stored in `~/.npm` on Linux/macOS
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ matrix.node }}-npm-cache-${{ hashFiles('**/package-lock.json') }}
 
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php }}
           coverage: none
-          tools: composer
-            
-      - name: Install composer dependencies
-        run: composer config github-oauth.github.com ${{ secrets.PRIVATE_ACCESS_TOKEN }} && composer install --prefer-dist --no-suggest --no-progress
+          tools: composer, cs2pr, phpcs
 
-      - name: PHPCS check
+      - name: Install dependencies
+        run: composer install --prefer-dist --no-suggest --no-progress && npm install
+
+      - name: Run phpcs
+        id: phpcs
         if: always()
-        uses: chekalsky/phpcs-action@v1
-        with:
-          phpcs_bin_path: './vendor/bin/phpcs'
-          
-      - name: Use desired version of NodeJS
-        uses: actions/setup-node@v3
-        with:
-            node-version: ${{ matrix.node }}
-            cache: 'npm'
+        run: ./vendor/bin/phpcs --report-full --report-checkstyle=./phpcs-report.xml
 
-      - name: npm install
-        run: npm ci
+      - name: Show PHPCS results in PR
+        if: ${{ always() && steps.phpcs.outcome == 'failure' }}
+        run: cs2pr ./phpcs-report.xml
 
-      - name: Build project
-      run: npm run build
+      - name: Prettier Check
+        if: always()
+        run: npm run pretty
 
       - name: Lint JS
-        run: npm run lint:js
+        if: always()
+        run: npm run lint-js
+
+      - name: Lint CSS
+        if: always()
+        run: npm run lint-css
