--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
 
     strategy:
       matrix:
-        node: [ 14.17 ]
+        node: [ 18.15.0 ]
         php: ['7.4', '8.1']
 
     steps:
@@ -43,6 +43,11 @@ jobs:
 
       - name: Install composer dependencies
         run: composer config github-oauth.github.com ${{ secrets.PRIVATE_ACCESS_TOKEN }} && composer install --prefer-dist --no-suggest --no-progress
+
+      - name: Install npm dependencies
+        run: |
+          npm ci
+          npm list --depth=0
 
       - name: Run phpcs
         id: phpcs
