updated phpcs workflow file 7

--- a/package.json
+++ b/package.json
@@ -102,9 +102,9 @@
 				"test:e2e:ci": "npm run test:e2e -- --runInBand",
 				"test:e2e:debug": "npm run test:e2e -- --puppeteer-devtools",
 				"format": "wp-scripts format tests/",
-				"lint:css": "wp-scripts lint-style tests/",
-				"lint:js": "wp-scripts lint-js tests/",
-				"lint:js:fix": "npm run format && wp-scripts lint-js tests/ --fix",
+				"lint:css": "wp-scripts lint-style",
+				"lint:js": "wp-scripts lint-js",
+				"lint:js:fix": "npm run format && wp-scripts lint-js --fix",
 				"env:start": "wp-env start && wp-env run cli \"wp theme activate astra\" && wp-env run cli \"wp rewrite structure '%postname%' --hard --quiet\" && wp-env run cli \"wp rewrite flush\"",
 				"env:stop": "wp-env stop",
 				"env:destroy": "wp-env destroy",
