--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,9 @@ jobs:
           path: ~/.npm
           key: ${{ runner.os }}-node-${{ matrix.node }}-npm-cache-${{ hashFiles('**/package-lock.json') }}
 
+      - name: Install npm dependencies
+        run: npm install
+
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
