--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,7 +45,12 @@ jobs:
           tools: composer, cs2pr
 
       - name: Install composer dependencies
-        run: composer config github-oauth.github.com ${{ secrets.PRIVATE_ACCESS_TOKEN }} && composer install --prefer-dist --no-suggest --no-progress
+        run: |
+          if [ -n "${{ secrets.PRIVATE_ACCESS_TOKEN }}" ]; then
+            composer config github-oauth.github.com ${{ secrets.PRIVATE_ACCESS_TOKEN }}
+          fi
+          composer install --prefer-dist --no-suggest --no-progress
+          composer show | grep phpstan || echo "phpstan not found"
 
       - name: Run phpcs
         id: phpcs
