--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,10 +43,9 @@ jobs:
 
       - name: Install composer dependencies
         run: |
-          if [ -n "${{ secrets.PRIVATE_ACCESS_TOKEN }}" ]; then
-            composer config github-oauth.github.com ${{ secrets.PRIVATE_ACCESS_TOKEN }}
-          fi
-          composer install --prefer-dist --no-progress
+          composer config github-oauth.github.com ${{ secrets.GITHUB_TOKEN }}
+          composer install --ignore-platform-reqs --no-interaction || composer install --no-dev --ignore-platform-reqs --no-interaction
+          composer require --dev squizlabs/php_codesniffer phpstan/phpstan --ignore-platform-reqs --no-interaction
 
       - name: Run phpcs
         id: phpcs
