updated github workflow files 13

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,5 +58,5 @@ jobs:
 
       - name: PHP static analysis
         if: always()
-        run: composer run phpstan
+        run: composer phpstan
         
