--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,8 +11,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node: [ 18.15.0 ]
-        php: ['7.4', '8.1']
+        node: [ 14.15 ]
+        php: ['7.4']
     steps:
       - name: Checkout
         uses: actions/checkout@v4
