--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,11 +23,8 @@ jobs:
           coverage: none
           tools: composer, cs2pr
 
-      - name: Install composer dependencies (CI safe)
-        run: |
-          composer install --ignore-platform-reqs --no-interaction --no-scripts --no-plugins
-          composer require --dev squizlabs/php_codesniffer phpstan/phpstan --ignore-platform-reqs --no-interaction
-          ls -la vendor/bin/
+      - name: Install composer dependencies
+        run: composer config github-oauth.github.com ${{ secrets.PRIVATE_ACCESS_TOKEN }} && composer install --prefer-dist --no-suggest --no-progress
 
       - name: Run PHPCS with annotations
         run: vendor/bin/phpcs -q --report=checkstyle | cs2pr
