--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       matrix:
         node: [ 18.15.0 ]
-        php: ['8.1']
+        php: ['8.1', '8.2']
     steps:
       - name: Checkout
         uses: actions/checkout@v4
