--- a/composer.json
+++ b/composer.json
@@ -57,6 +57,9 @@
     "allow-plugins": {
       "composer/installers": true,
       "dealerdirect/phpcodesniffer-composer-installer": true
+    },
+    "platform": {
+      "php": "8.1.33"
     }
   }
 }
